# clutter-kawase-blur-effect-demo

./: .gitignore  README.md  clutter-kawase-blur-effect.c  clutter-kawase-blur-effect.h  clutterapp  cogl-hello.c  compile.sh  hello  main.c  meson.build  test  test.c  viewer.c  viewer.h
